--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -35,26 +36,22 @@
 
     <!-- Foto de Eloy y Titulo -->
     <div class="foto-logo-container">
-        <div class="logo-largo-container d-flex align-items-center" style="height: 100%;">
-            <img class="logo-largo" src="./assets/Group 1Logo.png" alt="Logo Largo">
-        </div>
-        <div class="fotos-container">
-            <img class="foto-2" src="/assets/navidad2 copia.jpg" style="width: 30rem;
-            border-radius: 1rem" alt="Foto Eloy 2">
-        </div>
-    </div>
+        <img class="foto-2" src="/assets/NAvidadAI.webp" alt="Foto Eloy 2">
+        <img class="logo-largo" src="./assets/Group 1Logo.png" alt="Logo Largo">
+        
+    </div>    
 
     <!-- Quien es Eloy? -->
 
-    <p class="title" id="primer-banner">Quien es Eloy?</p>
+    <p class="title-primer-banner" id="primer-banner">Quien es Eloy?</p>
 
     <div class="primer-texto-container">
         <div class="img-container">
-            <img class="foto-1" src="/assets/EloyCortada.jpg" alt="Foto Eloy 1">
+            <img class="foto-1" src="/assets/EloyCortada.webp" alt="Foto Eloy 1">
         </div>
 
-        <div class="text-container d-flex align-items-center">
-            <div class="parrafo-izquierdo">
+        <div class="text-container">
+            <div class="parrafo-izquierdo-primer-banner">
                 <p class="title"><strong>Eloy Lanza Gonzalez</strong></p>
                 <p>Es un vecino de Benito Juárez de 8 años de edad.</p>
                 <p>Ama los gatitos.</p>
@@ -63,25 +60,25 @@
                 <p>Las matemáticas.</p>
                 <p>Hablar en inglés.</p>
                 <p>La playa.</p>
-                <p>La montaña.</p>
             </div>
 
-            <div class="linea-divisoria"></div>
+            <div class="linea-divisoria-primer-banner"></div>
 
-            <div class="parrafo-centro">
+            <div class="parrafo-centro-primer-banner">
+                <p>La montaña.</p>
                 <p>El dulce de leche.</p>
                 <p>A sus amigos Thiago y Bastian.</p>
                 <p>A sus hermanxs.</p>
                 <p>Desayunar en la cama.</p>
                 <p>La chocolatada con galletitas.</p>
                 <p>Festejar su cumpleaños redeado de la gente que lo quiere.</p>
-                <p>Comer las cosas ricas que coocina su hermana Keila.</p>
+                <p>Jugar con el celu.</p>
+                <p>Comer las cosas ricas que cocina su hermana Keila.</p>
             </div>
 
-            <div class="linea-divisoria"></div>
+            <div class="linea-divisoria-primer-banner"></div>
 
-            <div class="parrafo-derecho">
-                <p>Jugar con el celu.</p>
+            <div class="parrafo-derecho-primer-banner">
                 <p>Dormir con mamá y papá.</p>
                 <p>Jugar a las bolitas.</p>
                 <p>A Eloy le encanta pasear con su perro Toby.</p>
@@ -96,11 +93,11 @@
 
     <!-- Que es el Sindrome de Crouzon? -->
 
-    <p class="title" id="segundo-banner">¿Que es el sindrome de crouzon?</p>
+    <p class="title-segundo-banner" id="segundo-banner">¿Que es el sindrome de crouzon?</p>
 
     <div class="segundo-texto-container">
 
-        <div class="text-container d-flex align-items-center">
+        <div class="text-container">
             <div class="parrafo-izquierdo">
                 <p>Es una enfermedad rara de origen genético que se caracteriza por malformaciones del cráneo y de la
                     cara.</p>
@@ -122,98 +119,215 @@
 
             </div>
             <div class="img-container">
-                <img class="foto-1" src="/assets/Eloy2Cortada.jpg" alt="Foto Eloy 1">
+                <img class="foto-1" src="/assets/Eloy2Cortada.webp" alt="Foto Eloy 1">
             </div>
         </div>
     </div>
 
-    <p class="title" id="tercer-banner">¿Como colaborar?</p>
+    <!-- Como Colabrorar? -->
 
-    <div class="primer-texto-container">
+    <p class="title-tercer-banner" id="tercer-banner">¿Como colaborar?</p>
 
-        <div class="text-container d-flex align-items-center">
+    <div class="tercer-texto-container">
+
+        <div class="text-container-tercer-banner d-flex align-items-center">
             <div class="parrafo-izquierdo">
+                <p class="title-transferencia"><strong>Transferencia bancaria</strong></p>
+                <p>Podes donar por los siguientes medios con numero de CBU o alias que figuran abajo:</p>
+                <div class="contenedor-logos">
+                    <img src="/assets/MP-logo.png" alt="Logo Mercado Pago">
+                    <img src="/assets/CDni.png" alt="Logo Cuenta Dni">
+                    <img src="/assets/Transf-sin-fondo.png" alt="Logo transferencia Bancaria">
+                </div>
+                <div class="cuentas-container mt-4 d-flex flex-column gap-3"
+                    style="width: 100%; justify-content: center; align-items: center">
+                    <div class="cbu-container d-flex mt-auto mb-auto"
+                        style="width: 75%; height: 2.5rem; background-color: cadetblue; color: white; justify-content:center; border-radius: 10px">
+                        <p class="mt-2">CBU: <strong>0140408503630106157655</strong></p>
+                    </div>
 
-            </div>
+                    <div class="alias-container d-flex"
+                        style="width: 55%; height: 2.5rem; background-color: cadetblue; color: white; justify-content: center; border-radius: 10px">
+                        <p class="mt-2">Alias: <strong> Todos.por.eloy</strong> </p>
+                    </div>
 
-            <div class="linea-divisoria"></div>
-
-            <div class="parrafo-centro">
-
+                </div>
             </div>
 
             <div class="linea-divisoria"></div>
 
             <div class="parrafo-derecho">
-
+                <p class="title-efectivo"><strong>Dinero en Efectivo</strong></p>
+                <p class="m-4">¿No tenes medios de pagos digitales y queres colaborar?</p>
+                <p>Podes acercarte a <Strong>Advance</Strong>, o comunicarte a los telefonos mencionados en la seccion
+                    de <strong>Contactos</strong> y seras asesorado/a al respecto.</p>
+                <img class="imagen-arrow-down" src="/assets/Arrow Down.svg" alt="Arrow Down">
             </div>
         </div>
     </div>
 
     <!-- Sorteo -->
 
-    <p class="title" id="cuarto-banner">Sorteo</p>
+    <p class="title-sorteo" id="cuarto-banner">Sorteo</p>
+    <p class="titulo-secundario">Bono Contribucion</p>
+    <p class="titulo-secundario">Destinado a solventar los gastos en la estadia cuando ocurra su operacion.</p>
+    <p class="titulo-secundario valor"><Strong>Valor $ 1000</Strong></p>
+    <p class="titulo-secundario">Sortea el miercoles 8/11 por Fm del Sol</p>
 
     <div class="primer-texto-container">
 
         <div class="text-container d-flex align-items-center">
             <div class="parrafo-izquierdo">
+                <p class="titulo-premio">Premios</p>
+                <ul>
+                    <li>1ero: 20 Litros de Pintura (Sanitarios Rivadavia)</li>
+                    <li>2do: 1 Asador (Bruno Martinez)</li>
+                    <li>3ero: 1 Voucher de $20.000 (Piedra Libre)</li>
+                    <li>4to: 1 Voucher $10.000 (Pekes)</li>
+                    <li>5to: 1 Voucher $10.000 (Dietética San Martin)</li>
+                    <li>6to: 1 Perchero de pie (Deco-Muebles El Salmón)</li>
+                    <li>7mo: 1 Voucher $4.000 (Polipez Av. Uruguay)</li>
+                    <li>8vo: 1 Voucher $4.000 (Saldería Raúl)</li>
+                    <li>9no: 1 Voucher $4.000 (Cotillón Alegria)</li>
+                    <li>10mo: 1 Maceton (INTE)</li>
+                    <li>11: 1 Auriculares inalámbricos (Advanced)</li>
+                    <li>12: 2 Perfumes Bagues (Ohana_Bagues_bj)</li>
+                    <li>13: 1 Tattoo de 7x7 cm (Nacho Medina Tatto)</li>
+                    <li>14: 1 Voucher de $3.000 (GLOSS juguetería_regalería)</li>
+                    <li>15: 1 Pijama (Belleza Interior)</li>
+                    <li>16: 1 Remerón (Oceánica indumentaria)</li>
+                    <li>17: 1 Remerón (Angelo Mio)</li>
+                    <li>18: 1 Remera (Divas)</li>
+                    <li>19: 1 Servicio de manicuría a elección (Happy Nails)</li>
+                    <li>20: 1 Linftingh de pestanas con perfilado + 1 sesión de spa facial (Glamourlashesbj)</li>
+                    <li>21: 1 Pack de bombachas + 1 par de medias (Pink lencería)</li>
+                    <li>22: 1 Perfume y 1 alcohol en gel Natura (Carolina Avila)</li>
+                    <li>23: 1 Kit de cosmética natural (Vive Hygge)</li>
+                    <li>24: 1 Perfume + 1 rinonera (Eman)</li>
+                    <li>25: 1 Cambiador de bebé + 2 babitas (MIMI- Lorena Barrere)</li>
+                    <li>26: 1 Kit de sahumerios + 1 masaje descontracturante (Acercate a ti)</li>
+                </ul>
 
             </div>
 
-            <div class="linea-divisoria"></div>
-
-            <div class="parrafo-centro">
-
-            </div>
-
-            <div class="linea-divisoria"></div>
+            <div class="linea-divisoria-cuarto-banner"></div>
 
             <div class="parrafo-derecho">
-
+                <ul>
+                    <li>27: 1 Masaje descontracturante con fangoterapia (Makeh)</li>
+                    <li>28: 1 Masaje facial + 1 masaje de medio cuerpo (Yanina Gandarias)</li>
+                    <li>29: 1 Servicio a elección (Nails_bybreenda)</li>
+                    <li>30: 1 Sesión de masajes relax (Bonita Armonía-Micaela Cejas)</li>
+                    <li>31: 1 Servicio de esmaltado semipermanente (sm_espacio: Sofi Mansilla)</li>
+                    <li>32: 1 Kit Natura Ekos spa (Betania Alonso)</li>
+                    <li>33: 1 Perfume Natura (Eliana Gamaleri)</li>
+                    <li>34: 1 Servicio a elección (Ayla Nails y pedicuria)</li>
+                    <li>35: 1 Kit Todo Dia (Pilpalac)</li>
+                    <li>36: 1 Chaleco tejido a elección (Julianita Tejidos)</li>
+                    <li>37: 1 Nutrición capilar (Estilo Jooha)</li>
+                    <li>38: 1 Nutrición capilar (Ponte Guapa)</li>
+                    <li>39: 1 Limpieza facial (Sentirte Bien)</li>
+                    <li>40: 1 Atrapasuenos y 1 vela de cera de soja (El Bosquecito Artesanias)</li>
+                    <li>41: 1 Picada (CHILL picadas)</li>
+                    <li>42: 1 Juego de asociación de emociones (Kiut juegosdidacticos)</li>
+                    <li>43: 1 Juego de mesa (Eureka)</li>
+                    <li>44: 1 Almohadilla terapeútica de semillas (ELeTE)</li>
+                    <li>45: 1 Cuadro pintado a mano (Maria Irene Porras)</li>
+                    <li>46: 1 Budin y 1 pack de hamburguesas saludables</li>
+                    <li>47: 1 Pack de velas (Soph.candels)</li>
+                    <li>48: 1 Organizador pediátrico (Rainatandil)</li>
+                    <li>49: 1 Espejo en macramé (Norma Silva)</li>
+                    <li>50: 1 Rosario de Salve Regina (Marietta Gutierrez)</li>
+                    <li>51: 1 Mate pintado a mano (Natasha Dispinzieri)</li>
+                </ul>
             </div>
+
         </div>
     </div>
 
     <!-- Contactos -->
 
-    <p class="title" id="quinto-banner">Contactos</p>
+    <p class="title-quinto-banner" id="quinto-banner">Contactos</p>
 
     <div class="primer-texto-container">
 
         <div class="text-container d-flex align-items-center">
             <div class="parrafo-izquierdo">
+                <img src="/assets/house.svg" alt="" style="width: 3rem; margin: 2rem">
+                <p class="title-advance"><strong>Advance</strong></p>
+                <p>Libertad 30</p>
+                <p>Lunes a viernes de 10 a 12:30 hs y de 17 a 20 hs.</p>
+
+                <p>Sabados de 10 a 12:30 hs.</p>
+
+                <a href="https://maps.app.goo.gl/x74AoPYTWSDqtkqaA" target="_blank" rel="noopener noreferrer"> <img
+                        src="/assets/google-maps.svg" alt="Ubicacion"></a>
 
             </div>
 
             <div class="linea-divisoria"></div>
 
             <div class="parrafo-centro">
-
+                <img src="/assets/whatsapp.svg" alt="Ubicacion" style="width: 3rem; margin: 1.5rem">
+                <p class="m-4">Laura Gonzalez</p>
+                <p>(Mama de Eloy)</p>
+                <div class="whatsapp-container">
+                    <p class="mt-2">Escribinos</p>
+                    <a href="https://wa.me/+5492281478162" target="_blank" rel="noopener noreferrer"><img
+                            src="/assets/whatsapp.svg" alt="Ubicacion" style="width: 1.5rem;"></a>
+                </div>
             </div>
 
             <div class="linea-divisoria"></div>
 
             <div class="parrafo-derecho">
+                <img src="/assets/instagram.svg" alt="Ubicacion">
+
+                <p class="cuenta">@todxs_por_eloy</p>
+
+                <div class="instagram-container">
+                    <p class="mt-2">Seguinos</p>
+                    <a href="https://www.instagram.com/todxs_por_eloy/" target="_blank" rel="noopener noreferrer"><img
+                            src="/assets/instagram.svg" alt="Ubicacion"></a>
+                </div>
 
             </div>
         </div>
     </div>
 
+    <!-- Mensaje Final -->
+
+    <p class="mensaje-final">Muchas Gracias por Colaborar</p>
+
+
     <!-- Footer -->
 
-    <div class="container-fluid" style="height: 120px;
-    background-color: lightgray;
-    margin-top: 10rem;
-    text-align: center;">
+    <div class="footer" style="">
 
-        
+        <div class="tags-container">
+            <a class="nav-link" href="#">Inicio</a>
+            <a class="nav-link" href="#primer-banner">¿Quien es Eloy?</a>
+            <a class="nav-link" href="#segundo-banner">¿Que es el sindrome de crouzon?</a>
+            <a class="nav-link" href="#tercer-banner">¿Como colaborar?</a>
+            <a class="nav-link" href="#cuarto-banner">Sorteo</a>
+            <a class="nav-link" href="#quinto-banner">Contacto</a>
+        </div>
 
-    </div>
+        <div class="location-container">
+            <p>Advance -</p>
+            <p>Libertad 30 -</p>
+            <p>Benito Juarez -</p>
+            <p>Buenos Aires -</p>
+            <p>Argentina.</p>
+        </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        <a class="firma" href="https://www.linkedin.com/in/gaston-fauret/" target="_blank"
+            rel="noopener noreferrer">Diseño por Gaston
+            Fauret</a>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
