Pagina Lista a la espera de la Aprobacion del cliente

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					montaña. El dulce de leche. A sus amigos Thiago y Bastian. A sus hermanxs. Desayunar en la cama. La
 					chocolatada con galletitas. Festejar su cumpleaños redeado de la gente que lo quiere. Jugar con el
 					celu. Comer las cosas ricas que cocina su hermana Keila. Dormir con mamá y papá. Jugar a las
-					bolitas.A Eloy le encanta pasear con su perro Toby. Le encanta tirarse en el sillon a hacerle mimos
+					bolitas. A Eloy le encanta pasear con su perro Toby. Le encanta tirarse en el sillon a hacerle mimos
 					a su gata mimosa. Comer milanesas sin mayonesa. Ir a merendar al cafe 180 donde siempre es bien
 					recibido.</p>
 				<p><strong>Y por sobre todo disfrutar de la vida.</strong></p>
@@ -95,7 +95,7 @@
 							<li>4to: 1 Voucher $10.000 (Pekes)</li>
 							<li>5to: 1 Voucher $10.000 (Dietética San Martin)</li>
 							<li>6to: 1 Perchero de pie (Deco-Muebles El Salmón)</li>
-							<li>7mo: 1 Voucher $4.000 (Polipez Av. Uruguay)</li>
+							<li>7mo: 1 Voucher $4.000 (Polipez Avenida Uruguay)</li>
 							<li>8vo: 1 Voucher $4.000 (Saldería Raúl)</li>
 							<li>9no: 1 Voucher $4.000 (Cotillón Alegria)</li>
 							<li>10mo: 1 Maceton (INTE)</li>
@@ -129,7 +129,7 @@
 							<li>37: 1 Nutrición capilar (Estilo Jooha)</li>
 							<li>38: 1 Nutrición capilar (Ponte Guapa)</li>
 							<li>39: 1 Limpieza facial (Sentirte Bien)</li>
-							<li>40: 1 Atrapasuenos y 1 vela de cera de soja (El Bosquecito Artesanias)</li>
+							<li>40: 1 Atrapasueños y 1 vela de cera de soja (El Bosquecito Artesanias)</li>
 							<li>41: 1 Picada (CHILL picadas)</li>
 							<li>42: 1 Juego de asociación de emociones (Kiut juegosdidacticos)</li>
 							<li>43: 1 Juego de mesa (Eureka)</li>
@@ -156,11 +156,11 @@
 				<p><strong>Transferencia bancaria</strong> </p>
 				<p>Podes donar por los siguientes medios con numero de CBU o alias que figuran abajo:</p>
 				<ul class="actions" style="display: flex; flex-direction: column; gap: 1rem">
-					<li>CBU:<a href="#" class="button primary large cbu"
+					<li>CBU:<a style="margin-left: 0.5rem" href="#" class="button primary large cbu"
 							onclick="copiar('.cbu', 'Cbu')">0140408503630106157655</a></li>
-					<li>Alias:<a href="#" class="button primary large alias"
+					<li>Alias:<a style="margin-left: 0.5rem" href="#" class="button primary large alias"
 							onclick="copiar('.alias', 'Alias')">Todos.por.eloy</a></li>
-					<li>Cuil:<a href="#" class="button primary large cuil" onclick="copiar('.cuil', 'Nro de CUIL')">
+					<li>Cuil:<a style="margin-left: 0.5rem" href="#" class="button primary large cuil" onclick="copiar('.cuil', 'Nro de CUIL')">
 							27254346468</a></li>
 				</ul>
 				<p><strong>Dinero en Efectivo</strong> </p>
@@ -230,7 +230,7 @@
 
 		<!-- Copyright -->
 		<div class="copyright">&copy; 2023 - todosporeloy.com. Todos los Derechos Reservados. <br> Diseño de Pagina:
-			<a class="firma" href="https://www.linkedin.com/in/gaston-fauret/" target="_blank"
+			<a style="color: #49fcd4" class="firma" href="https://www.linkedin.com/in/gaston-fauret/" target="_blank"
 				rel="noopener noreferrer">Gaston Fauret</a>
 		</div>
 
@@ -244,7 +244,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 
 </html>
