Cambios Pedidos por el cliente realizados

--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Paradigm Shift by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 
 <head>
@@ -41,13 +37,12 @@
 				<h2>¿Quien es Eloy?</h2>
 			</header>
 			<div class="content">
-				<p><strong>Eloy Lanza Gonzalez</strong> es un vecino de Benito Juárez de 8 años de edad. Ama los
+				<p><strong>Eloy Lanza Gonzalez</strong> es un vecino de Benito Juárez de 10 años de edad. Ama los
 					gatitos. El ajedrez. Los fideos con mucho queso. Las matemáticas. Hablar en inglés. La playa. La
 					montaña. El dulce de leche. A sus amigos Thiago y Bastian. A sus hermanxs. Desayunar en la cama. La
-					chocolatada con galletitas. Festejar su cumpleaños redeado de la gente que lo quiere. Jugar con el
+					chocolatada con galletitas. Festejar su cumpleaños rodeado de la gente que lo quiere. Jugar con el
 					celu. Comer las cosas ricas que cocina su hermana Keila. Dormir con mamá y papá. Jugar a las
-					bolitas. A Eloy le encanta pasear con su perro Toby. Le encanta tirarse en el sillon a hacerle mimos
-					a su gata mimosa. Comer milanesas sin mayonesa. Ir a merendar al cafe 180 donde siempre es bien
+					bolitas. A Eloy le encanta pasear con su perro Toby. Le encanta jugar con sus autitos hot wheels. Comer milanesas sin mayonesa. Ir a merendar al cafe 180 donde siempre es bien
 					recibido.</p>
 				<p><strong>Y por sobre todo disfrutar de la vida.</strong></p>
 				<span class="image main"><img src="images/NAvidadAI.jpg" alt="" /></span>
@@ -165,13 +160,11 @@
 				</ul>
 				<p><strong>Dinero en Efectivo</strong> </p>
 				<p>¿No tenes medios de pagos digitales y queres colaborar?</p>
-				<p>Podes acercarte a <Strong>Advance</Strong>, o podes contactarnos a traves de los medios dispuestos.
+				<p>Podes acercarte a <Strong>Advanced</Strong>, o podes contactarnos a traves de los medios dispuestos.
 					Podes encontrarlos en la seccion
 					de <strong>Contactos</strong>. <br> Comunicate y seras asesorado/a al respecto.</p>
 			</div>
-
 		</section>
-
 
 		<!-- Section -->
 		<section>
@@ -182,21 +175,16 @@
 			<footer>
 				<ul class="items">
 					<li>
-						<h3>Advance</h3>
+						<h3>Advanced</h3>
 						<a href="https://maps.app.goo.gl/x74AoPYTWSDqtkqaA" target="_blank"
 							rel="noopener noreferrer">Libertad 30.</a> <br>
-						<a href="https://maps.app.goo.gl/x74AoPYTWSDqtkqaA" target="_blank"
-							rel="noopener noreferrer">Lunes a viernes de 10 a 12:30 hs y de 17 a 20 hs. Sabados de 10 a
-							12:30 hs.</a>
+							<p style="margin: 0px;">Lunes a viernes de 10 a 12:30 hs y de 17 a 20 hs. Sabados de 10 a
+								12:30 hs.</p>						
 					</li>
 					<li>
 						<h3>Whatsapp</h3>
-						<a href="https://api.whatsapp.com/send?phone=542281478162&text=Hola%2C+Me+gustaria+colaborar+con+Eloy.+%0AComo+puede+hacerlo%3F"
-							target="_blank" rel="noopener noreferrer">Laura
-							Gonzalez</a><br>
-						<a href="https://api.whatsapp.com/send?phone=542281478162&text=Hola%2C+Me+gustaria+colaborar+con+Eloy.+%0AComo+puede+hacerlo%3F"
-							target="_blank" rel="noopener noreferrer">Mama de
-							Eloy</a><br>
+						<p style="margin: 0px;">Laura Gonzalez</p>
+						<p style="margin: 0px;">Mama de Eloy</p>						
 						<a href="https://api.whatsapp.com/send?phone=542281478162&text=Hola%2C+Me+gustaria+colaborar+con+Eloy.+%0AComo+puede+hacerlo%3F"
 							target="_blank" rel="noopener noreferrer">(2281)
 							478162</a>
@@ -225,6 +213,17 @@
 			<div class="content">
 				<h1 style="color: #49fcd4;">Muchas Gracias por Colaborar.</h1>
 				<span class="image main"><img src="images/img4.webp" alt="" /></span>
+			</div>
+		</section>
+
+		<section id="first">
+			<header>
+				<h2>Agradecimientos</h2>
+			</header>
+			<div style="margin-top: 0.7rem;" class="content">
+				<h3>Imprenta Graficom</h3>
+				<h3>Grafig - Soluciones Graficas</h3>
+				<h3>Gaston Fauret</h3>				
 			</div>
 		</section>
 
