Cambio en texto pedidos por cliente

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					montaña. El dulce de leche. A sus amigos Thiago y Bastian. A sus hermanxs. Desayunar en la cama. La
 					chocolatada con galletitas. Festejar su cumpleaños rodeado de la gente que lo quiere. Jugar con el
 					celu. Comer las cosas ricas que cocina su hermana Keila. Dormir con mamá y papá. Jugar a las
-					bolitas. A Eloy le encanta pasear con su perro Toby. Le encanta jugar con sus autitos hot wheels. Comer milanesas sin mayonesa. Ir a merendar al cafe 180 donde siempre es bien
+					bolitas. A Eloy le gusta jugar con su perro Bingo. Le encanta jugar con sus autitos hot wheels. Comer milanesas sin mayonesa. Ir a merendar al cafe 180 donde siempre es bien
 					recibido.</p>
 				<p><strong>Y por sobre todo disfrutar de la vida.</strong></p>
 				<span class="image main"><img src="images/NAvidadAI.jpg" alt="" /></span>
@@ -56,7 +56,7 @@
 			</header>
 			<div class="content">
 				<p>Es una enfermedad rara de origen genético que se caracteriza por malformaciones del cráneo y de la
-					cara. Los primeros síntomas aparecen alrededor de los 2 años, y consisten en deformidad del cráneo
+					cara. Los primeros síntomas pueden aparecer mediante estudios geneticos en los ultimos meses de gestacion del bebe aun en la panza de la mama, y consisten en deformidad del cráneo
 					causada por el cierre precoz de las suturas (craneoosinostosis). Es causado por mutaciones (cambios
 					anormales) del FGFR2 (receptor de factor de crecimiento fibroblasto) o menos comúnmente de los genes
 					FGFR2. Estos genes ayudan a regular el desarrollo de las extremidades. Una mutación en estos genes
