Listo para Subir

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			</header>
 			<div class="content">
 				<p>Es una enfermedad rara de origen genético que se caracteriza por malformaciones del cráneo y de la
-					cara. Los primeros síntomas pueden aparecer mediante estudios geneticos en los ultimos meses de gestacion del bebe aun en la panza de la mama, y consisten en deformidad del cráneo
+					cara. Los primeros síntomas pueden aparecer mediante estudios geneticos en los ultimos meses de gestacion del bebe aun en la panza de la mama, en el caso de Eloy se pudieron ver los primeros sintomas en el primer año y medio de vida donde recibio su primer intervencion quirurgica en la cual le reconstruyeron el craneo por el cierre de su fontanela. La misma consiste en deformidad del cráneo
 					causada por el cierre precoz de las suturas (craneoosinostosis). Es causado por mutaciones (cambios
 					anormales) del FGFR2 (receptor de factor de crecimiento fibroblasto) o menos comúnmente de los genes
 					FGFR2. Estos genes ayudan a regular el desarrollo de las extremidades. Una mutación en estos genes
